Fix nav boldness, increase mobile breakpoint to 1024px, add dark mode for sidebar popup

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -83,7 +83,7 @@ html.dark-mode .masthead {
   margin-right: 0.5rem;
   z-index: 100;
 
-  @include breakpoint($medium) {
+  @media (min-width: 1024px) {
     display: none;
   }
 
@@ -153,7 +153,7 @@ html.dark-mode .nav-toggle.is-active .navicon {
   text-overflow: ellipsis;
   max-width: 180px;
 
-  @include breakpoint($medium) {
+  @media (min-width: 1024px) {
     max-width: none;
     font-size: 1.1rem;
   }
